用户发送验证码、邮箱、推送ＯＫ

--- a/guns-vip-main/src/main/resources/config.properties
+++ b/guns-vip-main/src/main/resources/config.properties
@@ -1,2 +1,31 @@
 # api\u63a5\u53e3\u4e2d\u65e0\u9700\u767b\u5f55\u7684\u5730\u5740
-note.secureUrls=/api/auth,/api/test
+note.secureUrls=/api/user/login,/api/user/getCaptcha
+
+# \u9a8c\u8bc1\u7801, \u957f\u5ea6
+note.codeLength=6
+
+# \u9a8c\u8bc1\u7801, \u5931\u6548\u65f6\u95f4	
+note.codeExpirationMin=5
+
+# \u9a8c\u8bc1\u7801, \u53ef\u91cd\u53d1\u65f6\u95f4	
+note.codeIntervalMin=1
+
+# \u6781\u5149\u63a8\u9001
+note.jpushMaster=a9b7210447ad436ed9908830
+note.jpushAppKey=c1ae62f224d72fe0b8a9f14e
+
+# \u963f\u91cc\u4e91
+note.aliyunAccessKeyId=LTAIgYLh2FivBaVU
+note.aliyunSecret=XKYzXeb5pTpJTHDsx00WH7x0l0Lcl5
+
+# \u90ae\u7bb1
+note.emailAccountName=service@email.skyline-auto.cn
+note.emailFromAlias=\u5929\u9645\u7ebf
+# \u90ae\u7bb1\u6a21\u677f
+note.eTemplate=\u60a8\u7684\u9a8c\u8bc1\u7801${code}\uff08\u8be5\u9a8c\u8bc1\u7801${minute}\u5206\u949f\u5185\u6709\u6548\uff09\uff0c\u8bf7\u52ff\u6cc4\u9732\u4e8e\u4ed6\u4eba\uff01
+
+# \u77ed\u4fe1
+note.smsDomain=dysmsapi.aliyuncs.com
+note.smsSignName=\u5929\u9645\u7ebf
+# \u77ed\u4fe1\u6a21\u677f
+note.smsTemplate=SMS_176450476
