--- a/guns-vip-main/src/main/resources/config.properties
+++ b/guns-vip-main/src/main/resources/config.properties
@@ -27,9 +27,13 @@ note.emailAccountName=service@email.skyline-auto.cn
 note.emailFromAlias=\u5929\u9645\u7ebf
 # \u90ae\u7bb1\u6a21\u677f
 note.eTemplate=\u60a8\u7684\u9a8c\u8bc1\u7801${code}\uff08\u8be5\u9a8c\u8bc1\u7801${minute}\u5206\u949f\u5185\u6709\u6548\uff09\uff0c\u8bf7\u52ff\u6cc4\u9732\u4e8e\u4ed6\u4eba\uff01
+note.eInviteSuccessTemplate=\u606d\u559c\u60a8\u7ea6\u5355\u6210\u529f\uff01
+note.eInviteFailTemplate=\u62b1\u6b49\uff0c\u60a8\u7684\u7ea6\u5355\u88ab\u62d2\u7edd\uff0c\u8bf7\u7ee7\u7eed\u52aa\u529b\u54e6\uff01
 
 # \u77ed\u4fe1
 note.smsDomain=dysmsapi.aliyuncs.com
 note.smsSignName=\u5929\u9645\u7ebf
 # \u77ed\u4fe1\u6a21\u677f
 note.smsTemplate=SMS_176450476
+note.smsInviteSuccessTemplate=SMS_apply_success
+note.smsInviteFailTemplate=SMS_apply_fail
