--- a/guns-vip-main/src/main/resources/application.yml
+++ b/guns-vip-main/src/main/resources/application.yml
@@ -27,3 +27,23 @@ mybatis-plus:
 
 log:
   path: _app_logs
+  
+wx:
+  mp:
+    configs:
+      - appId: 1111 （一个公众号的appid）
+        secret: 1111（公众号的appsecret）
+        token: 111 （接口配置里的Token值）
+        aesKey: 111 （接口配置里的EncodingAESKey值）
+  open:
+    appId: ""
+    secret: ""
+    token: ""
+    aesKey: ""
+  pay:
+    appId: #微信公众号或者小程序等的appid
+    mchId: #微信支付商户号
+    mchKey: #微信支付商户密钥
+    subAppId: #服务商模式下的子商户公众账号ID
+    subMchId: #服务商模式下的子商户号
+    keyPath: # p12证书的位置，可以指定绝对路径，也可以指定类路径（以classpath:开头）
