--- a/guns-vip-main/src/main/resources/config.properties
+++ b/guns-vip-main/src/main/resources/config.properties
@@ -19,8 +19,8 @@ note.jpushMaster=a9b7210447ad436ed9908830
 note.jpushAppKey=c1ae62f224d72fe0b8a9f14e
 
 # \u963f\u91cc\u4e91
-note.aliyunAccessKeyId=LTAIgYLh2FivBaVU
-note.aliyunSecret=XKYzXeb5pTpJTHDsx00WH7x0l0Lcl5
+note.aliyunAccessKeyId=LTAI4Fe7mfYWFkbkhk871KUA
+note.aliyunSecret=YtbxdUfoLglEkQZmoqIMwzwVLwZKTZ
 
 # \u90ae\u7bb1
 note.emailAccountName=service@email.skyline-auto.cn
@@ -33,9 +33,9 @@ note.eEmergencyTemplate=\u7d27\u6025\u4fe1\u606f\uff1a\u7ea6\u5355\u65f6\u95f4${
 
 # \u77ed\u4fe1
 note.smsDomain=dysmsapi.aliyuncs.com
-note.smsSignName=\u5929\u9645\u7ebf
+note.smsSignName=\u5343\u5bfb\u65e5\u8bb0
 # \u77ed\u4fe1\u6a21\u677f
-note.smsTemplate=SMS_176450476
+note.smsTemplate=SMS_178560139
 note.smsInviteSuccessTemplate=SMS_apply_success
 note.smsInviteFailTemplate=SMS_apply_fail
 note.smsEmergencyTemplate=SMS_emergency
