--- a/guns-vip-main/pom.xml
+++ b/guns-vip-main/pom.xml
@@ -71,6 +71,18 @@
 			<artifactId>aliyun-java-sdk-dm</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>aliyun-java-sdk-green</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.aliyun.oss</groupId>
+			<artifactId>aliyun-sdk-oss</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.alipay.sdk</groupId>
