--- a/pom.xml
+++ b/pom.xml
@@ -291,23 +291,35 @@
 				<artifactId>aliyun-java-sdk-core</artifactId>
 				<version>4.0.6</version>
 			</dependency>
-
 			<dependency>
 				<groupId>com.aliyun</groupId>
 				<artifactId>aliyun-java-sdk-dysmsapi</artifactId>
 				<version>1.1.0</version>
 			</dependency>
-
+			<dependency>
+				<groupId>com.aliyun</groupId>
+				<artifactId>aliyun-java-sdk-green</artifactId>
+				<version>3.5.1</version>
+			</dependency>
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>1.2.51</version>
+			</dependency>
+			<dependency>
+				<groupId>com.aliyun.oss</groupId>
+				<artifactId>aliyun-sdk-oss</artifactId>
+				<version>2.8.3</version>
+			</dependency>
 			<dependency>
 				<groupId>com.aliyun</groupId>
 				<artifactId>aliyun-java-sdk-dm</artifactId>
 				<version>3.1.0</version>
 			</dependency>
-			
 			<dependency>
-			    <groupId>com.alipay.sdk</groupId>
-			    <artifactId>alipay-sdk-java</artifactId>
-			    <version>4.8.62.ALL</version>
+				<groupId>com.alipay.sdk</groupId>
+				<artifactId>alipay-sdk-java</artifactId>
+				<version>4.8.62.ALL</version>
 			</dependency>
 
 
