注册时可以绑定邀请码

--- a/guns-vip-main/src/main/resources/config.properties
+++ b/guns-vip-main/src/main/resources/config.properties
@@ -8,6 +8,9 @@ note.imagesPath=noteImages
 # \u9a8c\u8bc1\u7801, \u957f\u5ea6
 note.codeLength=6
 
+# \u63a8\u8350\u7801\u957f\u5ea6
+note.inviteCodeLength=6
+
 # \u9a8c\u8bc1\u7801, \u5931\u6548\u65f6\u95f4	
 note.codeExpirationMin=5
 
