附近约单列表

--- a/guns-vip-main/src/main/resources/config.properties
+++ b/guns-vip-main/src/main/resources/config.properties
@@ -17,6 +17,9 @@ note.codeExpirationMin=5
 # \u9a8c\u8bc1\u7801, \u53ef\u91cd\u53d1\u65f6\u95f4	
 note.codeIntervalMin=1
 
+# \u9644\u8fd1\u8ddd\u79bb\u8303\u56f4KM
+note.inviteRange=50
+
 # \u6781\u5149\u63a8\u9001
 note.jpushMaster=d2ed405a776d6453a675af2b
 note.jpushAppKey=1d7c641b7d8976f492d0db13
