--- a/guns-vip-main/src/main/resources/config.properties
+++ b/guns-vip-main/src/main/resources/config.properties
@@ -28,6 +28,11 @@ note.jpushAppKey=1d7c641b7d8976f492d0db13
 note.aliyunAccessKeyId=LTAI4Fe7mfYWFkbkhk871KUA
 note.aliyunSecret=YtbxdUfoLglEkQZmoqIMwzwVLwZKTZ
 
+# \u878d\u4e91
+note.rongCloudAppKey=pwe86ga5p46a6
+note.rongCloudAppSecret=oPjnWPJ7WiHIuC
+note.userDefaultAvatar=noteImages/defaultAvatar.jpg
+
 # \u90ae\u7bb1
 note.emailAccountName=service@email.skyline-auto.cn
 note.emailFromAlias=\u5929\u9645\u7ebf
