--- a/pom.xml
+++ b/pom.xml
@@ -403,6 +403,12 @@
 				<artifactId>httpclient</artifactId>
 				<!-- <version>4.3.1</version> -->
 			</dependency>
+			<!-- 融云聊天SDK -->
+			<dependency>
+				<groupId>cn.rongcloud.im</groupId>
+				<artifactId>server-sdk-java</artifactId>
+				<version>3.0.13</version>
+			</dependency>
 		</dependencies>
 
 	</dependencyManagement>
