--- a/guns-vip-main/src/main/resources/application-dev.yml
+++ b/guns-vip-main/src/main/resources/application-dev.yml
@@ -65,21 +65,21 @@ wx:
         aesKey: 
   pay:
     mp:
-      appId: #微信公众号或者小程序等的appid
-      mchId: #微信支付商户号
-      mchKey: #微信支付商户密钥
-      subAppId: #服务商模式下的子商户公众账号ID
-      subMchId: #服务商模式下的子商户号
-      keyPath: # p12证书的位置，可以指定绝对路径，也可以指定类路径（以classpath:开头）
-      useSandbox: falsee
+      appId: wx39767aa52e58e228
+      mchId: 1568034641
+      mchKey: 5rukFjNAdrUbCD6EvqTzSQfAqzUOIeML
+      subAppId:
+      subMchId:
+      keyPath: cert/prod/apiclient_cert.p12
+      useSandbox: false
     app:
-      appId: #微信公众号或者小程序等的appid
-      mchId: #微信支付商户号
-      mchKey: #微信支付商户密钥
-      subAppId: #服务商模式下的子商户公众账号ID
-      subMchId: #服务商模式下的子商户号
-      keyPath: # p12证书的位置，可以指定绝对路径，也可以指定类路径（以classpath:开头）
-      useSandbox: falsee
+      appId: wx73e189f481ea34f1
+      mchId: 1568034641
+      mchKey: 5rukFjNAdrUbCD6EvqTzSQfAqzUOIeML
+      subAppId:
+      subMchId:
+      keyPath: cert/prod/apiclient_cert.p12
+      useSandbox: false
 
 alipay:
   gateway: https://openapi.alipaydev.com/gateway.do
