微信登录，支付OK

--- a/guns-vip-main/pom.xml
+++ b/guns-vip-main/pom.xml
@@ -102,6 +102,10 @@
 			<groupId>com.github.binarywang</groupId>
 			<artifactId>weixin-java-mp</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+		</dependency>
 
 		<!-- 极光推送 -->
 		<dependency>
