--- a/guns-vip-main/src/main/resources/config.properties
+++ b/guns-vip-main/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 # api\u63a5\u53e3\u4e2d\u65e0\u9700\u767b\u5f55\u7684\u5730\u5740
-note.secureUrls=/api/user/login,/api/user/getCaptcha,/api/user/wx/oauthInfo,/api/user/wx/getInfo,/api/user/wx/login,/api/user/bindUser,/api/finance/wx/payNotify,/api/file/upload
+note.secureUrls=/api/user/login,/api/user/getCaptcha,/api/user/wx/oauthInfo,/api/user/wx/getInfo,/api/user/wx/login,/api/user/wx/bindUser,/api/finance/wx/payNotify,/api/file/upload
 
 # \u6587\u4ef6\u4e0a\u4f20\u8def\u5f84
 note.baseUploadPath=upload
@@ -16,6 +16,10 @@ note.codeExpirationMin=5
 
 # \u9a8c\u8bc1\u7801, \u53ef\u91cd\u53d1\u65f6\u95f4	
 note.codeIntervalMin=1
+
+# \u5fae\u4fe1\u652f\u4ed8\u76f8\u5173\u914d\u7f6e
+note.wxSpbillCreateIp=192.168.0.1
+note.wxNotifyUrl=https://app.qianxunnote.com/api/finance/wx/payNotify
 
 # \u9644\u8fd1\u8ddd\u79bb\u8303\u56f4KM
 note.inviteRange=50
