--- a/pom.xml
+++ b/pom.xml
@@ -346,6 +346,12 @@
 				<artifactId>weixin-java-mp</artifactId>
 				<version>3.5.0</version>
 			</dependency>
+			<!-- https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
+			<dependency>
+			    <groupId>com.thoughtworks.xstream</groupId>
+			    <artifactId>xstream</artifactId>
+			    <version>1.4.11.1</version>
+			</dependency>
 
 			<!--常用库依赖 -->
 			<dependency>
