--- a/guns-vip-main/src/main/resources/config.properties
+++ b/guns-vip-main/src/main/resources/config.properties
@@ -20,6 +20,11 @@ note.codeIntervalMin=1
 # \u5fae\u4fe1\u652f\u4ed8\u76f8\u5173\u914d\u7f6e
 note.wxSpbillCreateIp=192.168.0.1
 note.wxNotifyUrl=https://app.qianxunnote.com/api/finance/wx/payNotify
+note.wxCanWithdraw=false
+note.wxServiceContact=\u5df2\u7533\u8bf7\u63d0\u73b0\uff0c\u8bf7\u8054\u7cfb\u5fae\u4fe1\u5ba2\u670d\u3010kefu123456\u3011\u8fdb\u884c\u540e\u7eed\u64cd\u4f5c
+
+# \u652f\u4ed8\u5b9d\u652f\u4ed8\u76f8\u5173
+note.alipayCanWithdraw=false
 
 # \u9644\u8fd1\u8ddd\u79bb\u8303\u56f4KM
 note.inviteRange=50
