发送短信问题

--- a/guns-vip-main/src/main/resources/config.properties
+++ b/guns-vip-main/src/main/resources/config.properties
@@ -48,8 +48,8 @@ note.emailFromAlias=\u5929\u9645\u7ebf
 # \u90ae\u7bb1\u6a21\u677f
 note.eTemplate=\u60a8\u7684\u9a8c\u8bc1\u7801${code}\uff08\u8be5\u9a8c\u8bc1\u7801${minute}\u5206\u949f\u5185\u6709\u6548\uff09\uff0c\u8bf7\u52ff\u6cc4\u9732\u4e8e\u4ed6\u4eba\uff01
 note.eInviteSuccessTemplate=\u606d\u559c\u60a8\u7ea6\u5355\u6210\u529f\uff0c\u8bf7\u53ca\u65f6\u8d74\u7ea6\u54e6\uff01
-note.eInviteFailTemplate=\u7ea6\u5355\u672a\u6210\u529f\uff0c\u8bf7\u7ee7\u7eed\u52aa\u529bo\uff0c\u5e0c\u671b\u5c31\u5728\u773c\u524d\uff01
-note.eEmergencyTemplate=\u624b\u673a\u53f7\u4e3a${mobile}\u7684\u7528\u6237\u5411\u60a8\u53d1\u9001\u4e86\u7ea6\u5355\u4e00\u952e\u62a5\u8b66\uff0c\u8bf7\u53ca\u65f6\u8054\u7cfb\uff01\u8be6\u7ec6\u4fe1\u606f\uff1a\u7ea6\u5355\u65f6\u95f4${inviteTime}\uff0c\u7ea6\u5355\u5730\u70b9${location}\uff0c\u7ea6\u5355\u5bf9\u8c61\u8054\u7cfb\u65b9\u5f0f${contact}\u3002
+note.eInviteFailTemplate=\u7ea6\u5355\u672a\u6210\u529f\uff0c\u8bf7\u7ee7\u7eed\u52aa\u529b\uff0c\u5e0c\u671b\u5c31\u5728\u773c\u524d\uff01
+note.eEmergencyTemplate=\u4e00\u952e\u62a5\u8b66\uff0c\u8054\u7cfb\u4eba${contact}\uff0c\u65f6\u95f4${inviteTime}\uff0c\u5730\u70b9${location}\uff0c\u5bf9\u65b9\u624b\u673a${otherContact}\u3002
 
 # \u77ed\u4fe1
 note.smsDomain=dysmsapi.aliyuncs.com
