--- a/guns-vip-main/src/main/resources/application-dev.yml
+++ b/guns-vip-main/src/main/resources/application-dev.yml
@@ -29,7 +29,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://47.92.27.56:3306/guns?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
+    url: jdbc:mysql://47.92.27.56:3306/guns?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT&allowMultiQueries=true
     username: flag
     password: Hyzcq123,
     filters: wall,mergeStat
