--- a/guns-vip-main/src/main/resources/config.properties
+++ b/guns-vip-main/src/main/resources/config.properties
@@ -1,9 +1,10 @@
 # api\u63a5\u53e3\u4e2d\u65e0\u9700\u767b\u5f55\u7684\u5730\u5740
-note.secureUrls=/api/user/login,/api/user/getCaptcha,/api/user/wx/oauthInfo,/api/user/wx/getInfo,/api/user/wx/login,/api/user/wx/bindUser,/api/finance/wx/payNotify,/api/file/upload,/api/finance/wx/mp/config,/api/finance/alipay/payNotify
+note.secureUrls=/api/user/login,/api/user/getCaptcha,/api/user/wx/oauthInfo,/api/user/wx/getInfo,/api/user/wx/login,/api/user/wx/bindUser,/api/finance/wx/payNotify,/api/file/upload,/api/file/uploadPackage,/api/finance/wx/mp/config,/api/finance/alipay/payNotify
 
 # \u6587\u4ef6\u4e0a\u4f20\u8def\u5f84
 note.baseUploadPath=upload
 note.imagesPath=noteImages
+note.packageImagePath=package
 
 # \u9a8c\u8bc1\u7801, \u957f\u5ea6
 note.codeLength=6
