推送正式配置更新

--- a/guns-vip-main/src/main/resources/config.properties
+++ b/guns-vip-main/src/main/resources/config.properties
@@ -30,17 +30,23 @@ note.alipayCanWithdraw=false
 # \u9644\u8fd1\u8ddd\u79bb\u8303\u56f4KM
 note.inviteRange=50
 
-# \u6781\u5149\u63a8\u9001
-note.jpushMaster=d2ed405a776d6453a675af2b
-note.jpushAppKey=1d7c641b7d8976f492d0db13
+# \u6781\u5149\u63a8\u9001dev
+note.jpushMaster=f223b82ec3a4e0a802144917
+note.jpushAppKey=06af36a8bf1b2a9b123a1767
+# prod
+# note.jpushMaster=f223b82ec3a4e0a802144917
+# note.jpushAppKey=06af36a8bf1b2a9b123a1767
 
 # \u963f\u91cc\u4e91
 note.aliyunAccessKeyId=LTAI4Fe7mfYWFkbkhk871KUA
 note.aliyunSecret=YtbxdUfoLglEkQZmoqIMwzwVLwZKTZ
 
-# \u878d\u4e91
-note.rongCloudAppKey=pwe86ga5p46a6
-note.rongCloudAppSecret=oPjnWPJ7WiHIuC
+# \u878d\u4e91dev
+note.rongCloudAppKey=8brlm7uf8qt63
+note.rongCloudAppSecret=hoBXz14jZg
+# prod
+# note.rongCloudAppKey=8brlm7uf8qt63
+# note.rongCloudAppSecret=hoBXz14jZg
 note.userDefaultAvatar=noteImages/defaultAvatar.jpg
 
 # \u90ae\u7bb1
