--- a/guns-vip-main/src/main/resources/application-dev.yml
+++ b/guns-vip-main/src/main/resources/application-dev.yml
@@ -29,11 +29,10 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://47.92.27.56:3306/guns?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT&allowMultiQueries=true
-    username: flag
-    password: Hyzcq123,
+    url: jdbc:mysql://47.99.150.85:3306/guns?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT&allowMultiQueries=true
+    username: root
+    password: 123456
     filters: wall,mergeStat
-
     # 连接池大小根据实际情况调整
     max-active: 20
     max-pool-prepared-statement-per-connection-size: 20
