一键报警文案修改

--- a/guns-vip-main/src/main/resources/config.properties
+++ b/guns-vip-main/src/main/resources/config.properties
@@ -59,7 +59,7 @@ note.emailFromAlias=\u5929\u9645\u7ebf
 note.eTemplate=\u60a8\u7684\u9a8c\u8bc1\u7801${code}\uff08\u8be5\u9a8c\u8bc1\u7801${minute}\u5206\u949f\u5185\u6709\u6548\uff09\uff0c\u8bf7\u52ff\u6cc4\u9732\u4e8e\u4ed6\u4eba\uff01
 note.eInviteSuccessTemplate=\u606d\u559c\u60a8\u7ea6\u5355\u6210\u529f\uff0c\u8bf7\u53ca\u65f6\u8d74\u7ea6\u54e6\uff01
 note.eInviteFailTemplate=\u7ea6\u5355\u672a\u6210\u529f\uff0c\u8bf7\u7ee7\u7eed\u52aa\u529b\uff0c\u5e0c\u671b\u5c31\u5728\u773c\u524d\uff01
-note.eEmergencyTemplate=\u4e00\u952e\u62a5\u8b66\uff0c\u8054\u7cfb\u4eba${contact}\uff0c\u65f6\u95f4${inviteTime}\uff0c\u5730\u70b9${location}\uff0c\u5bf9\u65b9\u624b\u673a${otherContact}\u3002
+note.eEmergencyTemplate=\u7528\u6237${contact}\u5411\u60a8\u53d1\u9001\u4e86\u4e00\u952e\u62a5\u8b66\uff0c\u8bf7\u53ca\u65f6\u8054\u7cfb\u5bf9\u65b9\u6216\u5e73\u53f0${platformContact}\u8fdb\u884c\u5904\u7406
 
 # \u77ed\u4fe1
 note.smsDomain=dysmsapi.aliyuncs.com
@@ -68,4 +68,7 @@ note.smsSignName=\u5343\u5bfb\u65e5\u8bb0
 note.smsTemplate=SMS_178560139
 note.smsInviteSuccessTemplate=SMS_apply_success
 note.smsInviteFailTemplate=SMS_apply_fail
-note.smsEmergencyTemplate=SMS_179225264
+note.smsEmergencyTemplate=SMS_180955626
+
+# \u5e73\u53f0\u8054\u7cfb\u65b9\u5f0f
+note.platformContact=13211111111
