添加日记列表

--- a/guns-vip-main/src/main/resources/config.properties
+++ b/guns-vip-main/src/main/resources/config.properties
@@ -8,7 +8,7 @@ note.imagesPath=noteImages
 note.packageImagePath=package
 
 # \u5ba1\u6838\u5f00\u5173
-note.isOnline=false
+note.isOnline=true
 # \u9a8c\u8bc1\u7801, \u957f\u5ea6
 note.codeLength=6
 
