--- a/guns-vip-main/src/main/resources/config.properties
+++ b/guns-vip-main/src/main/resources/config.properties
@@ -33,6 +33,9 @@ note.alipayCanWithdraw=false
 # \u9644\u8fd1\u8ddd\u79bb\u8303\u56f4KM
 note.inviteRange=50000
 
+# \u6bcf\u5929\u6700\u591a\u53d1\u5e03\u76845\u6761
+note.maxInvite=5
+
 # \u6781\u5149\u63a8\u9001dev
 #note.jpushMaster=d2ed405a776d6453a675af2b
 #note.jpushAppKey=1d7c641b7d8976f492d0db13
